<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>me.mrexplode</groupId>
  <artifactId>timecode</artifactId>
  <version>1.2.0-PRERELASE</version>
  <name>Timecode</name>
  <description>ArtNet and LTC timecode generator.</description>
  <url>https://github.com/MrExplode/Timecode</url>
  <inceptionYear>2020</inceptionYear>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <dependencies>
    <!-- OSHI core -->
    <dependency>
      <groupId>com.github.oshi</groupId>
      <artifactId>oshi-core</artifactId>
      <version>5.1.0</version>
    </dependency>

    <!-- Jedis Client -->
    <dependency>
      <groupId>redis.clients</groupId>
      <artifactId>jedis</artifactId>
      <version>3.3.0</version>
      <type>jar</type>
      <scope>compile</scope>
    </dependency>
    
    <!-- JavaOSC -->
    <dependency>
	  <groupId>com.illposed.osc</groupId>
	  <artifactId>javaosc-core</artifactId>
	  <version>0.7</version>
    </dependency>

    <!-- JOptSimple -->
    <dependency>
      <groupId>net.sf.jopt-simple</groupId>
      <artifactId>jopt-simple</artifactId>
      <version>5.0.4</version>
    </dependency>

    <!-- ltc4j -->
    <dependency>
      <groupId>me.mrexplode</groupId>
      <artifactId>ltc4j</artifactId>
      <version>0.0.1-SNAPSHOT</version>
    </dependency>

    <!-- Gson -->
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.6</version>
    </dependency>

    <!-- Markdown -->
    <dependency>
      <groupId>com.vladsch.flexmark</groupId>
      <artifactId>flexmark-all</artifactId>
      <version>0.62.0</version>
    </dependency>

    <!-- Darklaf gui theme -->
    <dependency>
      <groupId>com.github.weisj</groupId>
      <artifactId>darklaf-core</artifactId>
      <version>2.5.3</version>
    </dependency>
    
    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.10</version>
      <scope>provided</scope>
    </dependency>
    
    <!-- Java XML -->
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.1</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-core</artifactId>
      <version>2.3.0.1</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-impl</artifactId>
      <version>2.3.3</version>
    </dependency>
    
    <!-- JUnit -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.6.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.6.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <!-- Maven Compiler -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      
      <!-- Maven Shade -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals><goal>shade</goal></goals>
          </execution>
        </executions>
      </plugin>
      
      <!-- Maven Jar -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <addMavenDescriptor>false</addMavenDescriptor>
            <manifestEntries>
              <Main-Class>me.mrexplode.timecode.Bootstrap</Main-Class>
              <SplashScreen-Image>icons/icon256.png</SplashScreen-Image>
              <built-by>MrExplode</built-by>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      
      <!-- Maven Surefire -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
      </plugin>
      
      <!-- Maven Failsafe -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.2</version>
      </plugin>
	  
	  <!-- PropertyExporter for custom build stash -->
	  <plugin>
	    <groupId>io.github.mrexplode</groupId>
		<artifactId>propertyexporter-maven-plugin</artifactId>
		<version>1.0.1</version>
		<configuration>
  		  <propList>
  		    <param>${project.name}</param>
  		    <param>${project.description}</param>
  		    <param>${project.build.finalName}.jar</param>
  		</propList>
  		<file>${project.build.directory}/info.txt</file>
        <separator>;</separator>
  		</configuration>
  		<executions><execution><goals><goal>export</goal></goals></execution></executions>
	  </plugin>
    </plugins>
  </build>
</project>